--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "php": ">=5.4.0",
+        "php": ">=7.1",
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0"
@@ -25,7 +25,8 @@
         "yiisoft/yii2-faker": "~2.0.0",
         "codeception/base": "^2.4.0",
         "phpunit/phpunit": "~6.5.5",
-        "codeception/verify": "~1.0.0"
+        "codeception/verify": "~1.0.0",
+        "kint-php/kint": "^3.1"
     },
     "config": {
         "process-timeout": 1800,
